<resources>
    <string name="app_name">SetLimitz</string>
    <string name="add_member_text">Open child\'s device and enter this FamilyID to add Child to this family.</string>
    <string name="group_id">Group ID</string>
    <string name="edit_family_name">Edit name</string>
    <string name="add_member_qr_text_join">Enter Family ID and fill out device information to add this device to your family</string>
    <string name="add_manager_description">Enter email and fill out device information to add this device to your family</string>
    <string name="enter_family_id">Family ID</string>
    <string name="device_type">Device Type</string>
    <string name="enter_device_name">Device Name</string>
    <string name="active_code">Activation code</string>
    <string name="devices">Devices</string>
    <string name="family_management">Family</string>
    <string name="delete_device">Delete</string>

    <string name="scan_qr_checkbox">Use scan QR code</string>

    <!--Terms and Conditions-->
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="term1_content">PLEASE READ THESE TERMS OF USER CAREFULLY BEFORE USING THE KEEPFOCUS APPLYCATION</string>
    <string name="term2_title">1.The application will help you : </string>
    <string name="term2a_content">a.With the parent mode : it will help you manager and control the launcher of any active
        application which was installed on your children device. You can control the time, the active application or block
        on your children device via KeepFocus in parent mode.</string>
    <string name="term2b_content">b.With the children mode : you can only visible the application which are blocking and the time
        these be blocked. And without the block time, you can see and check the notifications are missed on this block time.</string>
    <string name="term3_content">2.The application will need use (this content will show for user permissions require which
        are need for using application)</string>
    <string name="checkbox_agree">I have read and agree to all terms and conditions above</string>
    <string name="term_guide">Please refer to Terms and Conditions of Service.</string>
    <string name="term_link"><u>Terms and Conditions of Service</u></string>
    <string name="setup_mode_guide">Click on button "JOIN TO GROUP" if you want to join this device to already exist group</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="permission_rationale_2">"Storage permissions are needed for providing email
        completions."</string>
    <string name="text_no_group">No items</string>
    <string name="tap_add_to_begin_setup">Please tap ADD to begin setup</string>
    <string name="text_no_profile">There are no scheduler be config for %1$s. Please add new one by click "Add" button.</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="button_default">Default</string>
    <string name="button_create">Create</string>
    <string name="button_delete">Delete all</string>
    <string name="popup_setting">Settings</string>
    <string name="popup_about">About</string>
    <string name="popup_setting_edit">Edit profile name</string>
    <string name="popup_setting_delete">Delete schedule</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="edit_name">Edit name</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="day_title">Days</string>
    <string name="btn_monday">Mon</string>
    <string name="btn_tuesday">Tue</string>
    <string name="btn_wednesday">Wed</string>
    <string name="btn_thursday">Thu</string>
    <string name="btn_friday">Fri</string>
    <string name="btn_saturday">Sat</string>
    <string name="btn_sunday">Sun</string>

    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n0">0</string>

    <!--  Days title -->
    <string name="title_day">Days</string>
    <!--  Time title -->
    <string name="title_time">Times</string>
    <string name="add_button">ADD</string>

    <string name="item_block_title">What items are blocked</string>
    <string name="item_block_app_title">Is active</string>
    <string name="selected_app_title">Selected app</string>

    <string name="item_block_notification_title">Notification Count</string>

    <string name="title_necessary_system_settings">System settings</string>
    <string name="set_notification_access">Set notification access</string>
    <string name="set_notification_access_hint">Notification access must be enable for S Keep Focus in order to block notification.</string>
    <string name="set_application_access">Set application access</string>
    <string name="set_application_access_hint">Application usage access must be enable for S Keep Focus in order to block application.</string>
    <string name="PIN_code">PIN code</string>
    <string name="enable_PIN_code">Enable PIN code</string>
    <string name="set_PIN_code">Set PIN code</string>
    <string name="pin_code">Create a 4 digit PIN code</string>

    <string name="edit_name_popup_msg">Edit your profile name</string>
    <string name="create_profile_popup_msg">Create your new schedule that you want to keep focus</string>
    <string name="delete_profile_popup_msg">Do you want to delete this schedule ?</string>
    <string name="color_lock_title">Setup Password</string>
    <string name="password_color_lock_title">PIN CODE</string>
    <string name="choose_color_lock_title">INPUT PIN CODE</string>
    <string name="confirm_color_lock_title">CONFIRM PIN CODE</string>
    <string name="text_guide_1">Please input 4 values to pin code.</string>
    <string name="text_guide_2">Please confirm your pin code.</string>
    <string name="text_guide_3">Try again.</string>
    <string name="confirm_pin_code">Please input your pin code!</string>
    <string name="input_new_pin_code">Input your new pin code.</string>
    <string name="access_pin_code">Input pin code to access application.</string>
    <string name="delete_pincode">Remove pin code</string>
    <string name="delete_pincode_msg">Please input old pin code to remove it.</string>

    <string name="button_color_lock_reset">RESET</string>
    <string name="button_color_lock_undo">UNDO</string>
    <string name="button_color_lock_continue">CONTINUE</string>
    <string name="button_color_lock_confirm">CONFIRM</string>
    <string name="description_color_lock"></string>

    <string name="title_usage_access">Application access</string>
    <string name="popup_usage_access">You must enable application usage access for SetLimitz in order to block application</string>
    <string name="title_notification_access">Notifications access</string>
    <string name="popup_notification_access">You must enable notification access for SetLimitz in order to block notifications</string>
    <string name="popup_notification_access_not_support">This feature requires android OS version 4.3 or later, please upgrade your OS version</string>

    <!--  List missing notification history -->
    <string name="notificaion_icon">Notification Icon</string>
    <string name="notify_missing_notification">Hey ! You are missing %1$s Notifications</string>
    <string name="notify_missing_notification_content">Tap here to show all missing Notifications</string>
    <string name="missing_notification_title">All of missing Notifications</string>
    <string name="clear">Clear</string>
    <string name="block_app_description">was blocked.  Please use this app later.  Tap the Home button below to return to the Home Screen</string>
    <string name="close_button">Home</string>

    <string name="request_admin_text">You have to enable device administrators to use this application</string>
    <string name="title_request_admin">Request administrators</string>

    <string name="replace_device_text">This code is linked to another device, would you like to use this device instead?</string>
    <string name="title_replace_device">Replace child device</string>

    <string name="click_the_button">Click the Red button</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>

    <string name="setting_description">Switch on the below option to block Settings application and prevent your children access and change settings in their devices.</string>
    <string name="prevent_access_settings_app">Always block</string>
    <string name="error_no_child_add">There are no any children added in parent device. Please try again.</string>
    <string name="tap_to_edit">Tap here to edit schedule.</string>
</resources>
