<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/content_text_margin_start_end"
        android:layout_marginRight="@dimen/content_text_margin_start_end"
        android:gravity="center_horizontal"
        style="@style/title_text_style"
        android:textStyle="bold"
        android:text="@string/terms_and_conditions_title"/>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_text_margin_start_end"
        android:layout_marginRight="@dimen/content_text_margin_start_end"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_text_spacing_line"
            style="@style/content_text_style"
            android:text="@string/term1_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_text_spacing_gap"
            style="@style/content_text_style"
            android:text="@string/term2_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_text_spacing_line"
            style="@style/content_text_style"
            android:text="@string/term2a_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_text_spacing_line"
            style="@style/content_text_style"
            android:text="@string/term2b_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_text_spacing_gap"
            style="@style/content_text_style"
            android:text="@string/term3_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin">
        <CheckBox
            android:id="@+id/checkbox_agree"
            android:layout_width="@dimen/checkbox_size"
            android:layout_height="@dimen/checkbox_size"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkbox_agree"
                android:paddingLeft="40dp"
                android:gravity="center_vertical"
                android:layout_alignParentBottom="true"
                style="@style/content_text_style"
                android:text="@string/checkbox_agree"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimaryDark"/>

    <View
        android:id="@+id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"/>

</RelativeLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="right|bottom"
        android:text="NEXT"
        style="@style/title_text_style"/>
 </LinearLayout>
