<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#C7B8B8"
    tools:context="com.android.keepfocus.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="Please enter profile details for your account"
                style="@style/textView"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:id="@+id/tv_title"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <ImageView
                style="@style/imageView"
                android:src="@drawable/email"/>
            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:paddingLeft="70dp"
                android:textColor="@color/title_text_color"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <ImageView
                style="@style/imageView"
                android:src="@drawable/password"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:paddingLeft="70dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColor="@color/title_text_color"
                android:maxLines="1"
                android:singleLine="true" />
            </RelativeLayout>

            <TextView
                android:text="Forget Password ?"
                style="@style/textView"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:id="@+id/text_forget_pass"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/button_text_style"
                android:textSize="19dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
